--- a/index.html
+++ b/index.html
@@ -5,10 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="file.css">
+    <title>Dribbble - Discover the World's Top designer</title>
 </head>
 
 <body>
+    <div class="dribble">
+
+        <div class="top">
+            <div class="modle"> Discover</div>
+            <div class="a"> Animation</div>
+            <div class="b"> Branding</div>
+            <div class="i"> Illustration</div>
+            <div class="m"> Mobile</div>
+            <div class="p"> Print</div>
+            <div class="r"> Product Design</div>
+            <div class="t"> Typography</div>
+            <div class="w"> Web Design</div>
+        </div>
+        <div class="wholesecond">
+            <div class="second"> Explore the world's leading design portfolios</div>
+        </div>
+
+        <div class="wholethird">
+            <div class="third"> Millions of designers and agencies around the world showcase their portfolio work on
+                Dribbble - the home to the world's best design and creative professionals.</div>
+        </div>
+        <div class="o"> <button>
+                <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="grey"
+                        class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg></div>
+                <div class="in">
+                    <input type="text" placeholder="Search...">
+                </div>
+            </button></div>
+        <div class="last">
+
+
+            <div class="ing"> Trending searches</div>
+            <div class="forth">
+                <div class="lan"> landing page</div>
+                <div class="io">ios</div>
+                <div class="foo"> food</div>
+                <div class="page">landingpage</div>
+                <div class="ux">uxdesign </div>
+                <div class="app">app design</div>
+
+
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
